first two tests